Update banner, fix spacing (#60)

--- a/less/site.less
+++ b/less/site.less
@@ -241,3 +241,7 @@ a {
 .profile-inner {
   padding-top: 15px;
 }
+
+.banner {
+  padding-top: 10px;
+}
